--- a/src/main/resources/templates/cadastroCliente.html
+++ b/src/main/resources/templates/cadastroCliente.html
@@ -194,37 +194,37 @@
             <div class="modal-body">
             <form class="row g-3">
                 <div class="col-6">
-                    <label for="inputAddress" class="form-label text-white">Logradouro</label>
-                    <input type="text" class="form-control" id="inputLogradouro" placeholder="1234 Main St">
+                    <label for="" class="form-label text-white">Logradouro</label>
+                    <input type="text" class="form-control" id="inputLogradouro" >
                   </div>
-                  <div class="col-3">
-                      <label for="inputComplemento" class="form-label text-white">Numero</label>
-                      <input type="text" class="form-control" id="inputNumero" placeholder="1234 Main St">
+                  <div class="col-2">
+                      <label for="" class="form-label text-white">Numero</label>
+                      <input type="text" class="form-control" id="inputNumero">
                     </div>
-                  <div class="col-3">
-                      <label for="inputComplemento" class="form-label text-white">Complemento</label>
-                      <input type="text" class="form-control" id="inputComplemento" placeholder="1234 Main St">
+                  <div class="col-4">
+                      <label for="" class="form-label text-white">Complemento</label>
+                      <input type="text" class="form-control" id="inputComplemento">
                     </div>
-                  <div class="col-md-3">
-                      <label for="inputBairro" class="form-label text-white">Bairro</label>
+                  <div class="col-md-4">
+                      <label for="" class="form-label text-white">Bairro</label>
                       <input type="text" class="form-control" id="inputBairro">
                     </div>
                   <div class="col-md-3">
-                      <label for="inputCEP" class="form-label text-white">CEP</label>
-                      <input type="text" class="form-control" id="inputCep">
+                      <label for="" class="form-label text-white">CEP</label>
+                      <input type="text" class="form-control" id="inputCep" placeholder="Somente números" minlength="8" maxlength="8">
                   </div>
-                  <div class="col-md-3">
-                    <label for="inputCity" class="form-label text-white">Cidade</label>
+                  <div class="col-md-1">
+                    <label for="" class="form-label text-white">UF</label>
+                    <input type="text" class="form-control" id="inputUf" maxlength="2">
+                  </div>
+                  <div class="col-md-4">
+                    <label for="" class="form-label text-white">Cidade</label>
                     <input type="text" class="form-control" id="inputCidade">
                   </div>
-                  <div class="col-md-3">
-                    <label for="inputCity" class="form-label text-white">UF</label>
-                    <input type="text" class="form-control" id="inputUf">
-                  </div>
-                  
-                    <div class="col-12">
-                      <button type="submit" class="btn btn-primary">Adicionar endereço ao cadastro</button>
-                    </div>
+                  <div class="col-12">
+                    <button type="button" id="adicionarEnderecoButton" class="btn btn-primary">Adicionar Endereço</button>
+                </div>
+                
             </form>
             </div>
         </div>
@@ -236,31 +236,68 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   <script>
 
-    $(document).ready(function () {
-    $('#formCadastroCliente').on('submit', function (event) {
-        event.preventDefault();
 
-        var cliente = {
-            nome: document.getElementById('nome').value,
-            genero: document.getElementById('inputGenero').value,
-            dataNascimento: document.getElementById('dataNascimento').value,
-            cpf: document.getElementById('cpf').value,
-            email: document.getElementById('email').value,
-            senha: document.getElementById('senha').value,
-            confirmaSenha: document.getElementById('confirmaSenha').value,
-            endereco: [
-                {
-                    logradouro: document.getElementById('logradouro').value,
-                    numero: document.getElementById('numero').value,
-                    complemento: document.getElementById('complemento').value,
-                    bairro: document.getElementById('bairro').value,
-                    cep: document.getElementById('cep').value,
-                    uf: document.getElementById('uf').value,
-                    cidade: document.getElementById('cidade').value,
-                }
-            
-            ]
-        };
+
+
+$(document).ready(function () {
+
+var cliente = {
+    nome: '',
+    genero: '',
+    dataNascimento: '',
+    cpf: '',
+    email: '',
+    senha: '',
+    confirmaSenha: '',
+    endereco: []
+};
+
+$('#adicionarEnderecoButton').on('click', function () {
+    var endereco2 = {
+        logradouro: $('#inputLogradouro').val(),
+        numero: $('#inputNumero').val(),
+        complemento: $('#inputComplemento').val(),
+        bairro: $('#inputBairro').val(),
+        cep: $('#inputCep').val(),
+        uf: $('#inputUf').val(),
+        cidade: $('#inputCidade').val()
+    };
+
+    cliente.endereco.push(endereco2);
+
+    console.log(cliente);
+});
+
+$('#formCadastroCliente').on('submit', function (event) {
+    event.preventDefault();
+
+    var clienteData = {
+        nome: document.getElementById('nome').value,
+        genero: document.getElementById('inputGenero').value,
+        dataNascimento: document.getElementById('dataNascimento').value,
+        cpf: document.getElementById('cpf').value,
+        email: document.getElementById('email').value,
+        senha: document.getElementById('senha').value,
+        confirmaSenha: document.getElementById('confirmaSenha').value,
+        endereco: []  // Certifique-se de reiniciar o array de endereços para evitar duplicatas
+    };
+
+    var endereco1 = {
+        logradouro: $('#logradouro').val(),
+        numero: $('#numero').val(),
+        complemento: $('#complemento').val(),
+        bairro: $('#bairro').val(),
+        cep: $('#cep').val(),
+        uf: $('#uf').val(),
+        cidade: $('#cidade').val()
+    };
+
+    // Adiciona endereco1 à lista de endereços em clienteData
+    clienteData.endereco.push(endereco1);
+
+    // Adiciona todos os endereços do objeto cliente global ao objeto clienteData
+    clienteData.endereco = clienteData.endereco.concat(cliente.endereco);
+
         console.log(JSON.stringify(cliente));
         $.ajax({
             type: 'POST',
@@ -310,9 +347,9 @@ const addEventListeners = () => {
   document
     .getElementById("cep")
     .addEventListener("blur", handleCEPBlur());
-  // document
-  //   .getElementById("inputCep")
-  //   .addEventListener("blur", handleCEPBlur());
+  document
+    .getElementById("inputCep")
+    .addEventListener("blur", handleCEPBlur());
 };
 
 const handleCEPBlur = () => (e) => {
