--- a/src/main/resources/templates/landingPageProduto.html
+++ b/src/main/resources/templates/landingPageProduto.html
@@ -104,6 +104,56 @@ nav ul li a:hover {
         </div>
     </div>
 </nav>
+
+<div class="modal fade" id="enderecoModal" tabindex="-1" aria-labelledby="enderecoModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl">
+        <div class="modal-content fundoDoFormulario">
+            <div class="modal-header">
+                <h5 class="modal-title text-white" id="enderecoModalLabel">Endereço 2</h5>
+                <button type="button" class="btn-close text-white" data-bs-dismiss="modal" aria-label="Close" style="background-color: white;"></button>
+            </div>
+            <div class="modal-body">
+                <form class="row g-3">
+                    <div class="col-6">
+                        <label for="inputAddress" class="form-label text-white">Endereço</label>
+                        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                    </div>
+                    <div class="col-3">
+                        <label for="inputComplemento" class="form-label text-white">Numero</label>
+                        <input type="text" class="form-control" id="inputComplemento" placeholder="1234 Main St">
+                    </div>
+                    <div class="col-3">
+                        <label for="inputComplemento" class="form-label text-white">Complemento</label>
+                        <input type="text" class="form-control" id="inputComplemento" placeholder="1234 Main St">
+                    </div>
+                    <div class="col-md-3">
+                        <label for="inputBairro" class="form-label text-white">Bairro</label>
+                        <input type="text" class="form-control" id="inputBairro">
+                    </div>
+                    <div class="col-md-3">
+                        <label for="inputCEP" class="form-label text-white">CEP</label>
+                        <input type="text" class="form-control" id="inputCEP">
+                    </div>
+                    <div class="col-md-3">
+                        <label for="inputCity" class="form-label text-white">Cidade</label>
+                        <input type="text" class="form-control" id="inputCity">
+                    </div>
+                    <div class="col-md-3">
+                        <label for="inputEstado" class="form-label text-white">Estado</label>
+                        <input type="text" class="form-control" id="inputEstado">
+                    </div>
+                    <div class="col-12">
+                        <button type="submit" class="btn btn-primary">Sign in</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
 <div class="container-fluid"> <!-- Início do container para o carrossel -->
     <div id="carouselExampleCaptions" class="carousel slide" style="max-width: 100%; height: 500px; margin: 0 auto;">
         <div class="carousel-indicators">
