--- a/src/main/resources/templates/loginCliente.html
+++ b/src/main/resources/templates/loginCliente.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -43,13 +43,14 @@
   </style>
   <body class="bodyWinery">
     <div class="card corFundo" style="width: 25rem; height: 350px;">
+      <form th:action="@{/login}" method="post">
       <div class="card-body">
         <img src="../static/imagens/logoWinery250x250new.png" class="logoWinery" width="250px" alt="Logo da Winery">
         <div class="mb-3 mt-4">
-          <input type="text" class="form-control logoWinery" id="formGroupExampleInput" placeholder="Insira seu e-mail">
+          <input type="text" class="form-control logoWinery" id="formGroupExampleInput" placeholder="Insira seu e-mail" name="username">
         </div>
         <div class="mb-3 mt-4">
-          <input type="text" class="form-control logoWinery" id="formGroupExampleInput2" placeholder="Insira sua senha">
+          <input type="text" class="form-control logoWinery" id="formGroupExampleInput2" placeholder="Insira sua senha" name="password">
         </div>
         <div class="row">
           <div class="col">
@@ -59,8 +60,9 @@
             <a href="#" class="card-link cadastrar">Criar sua conta</a>
           </div>
         </div>
-        <button type="button" class="btn login-button logoWinery mt-4">Entrar</button>
+        <button type="submit" class="btn login-button logoWinery mt-4">Entrar</button>
       </div>
+      </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
